QtBeef/src/Qt/qabstracttextdocumentlayout.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QAbstractTextDocumentLayout
// --------------------------------------------------------------
[CRepr]
struct QAbstractTextDocumentLayout_Ptr: void
{
}
extension CQt
{
	[LinkName("QAbstractTextDocumentLayout_new")]
	public static extern QAbstractTextDocumentLayout_Ptr* QAbstractTextDocumentLayout_new(QTextDocument_Ptr** doc);
	[LinkName("QAbstractTextDocumentLayout_Delete")]
	public static extern void QAbstractTextDocumentLayout_Delete(QAbstractTextDocumentLayout_Ptr* self);
	[LinkName("QAbstractTextDocumentLayout_MetaObject")]
	public static extern QMetaObject_Ptr** QAbstractTextDocumentLayout_MetaObject(QAbstractTextDocumentLayout_Ptr* self);
	[LinkName("QAbstractTextDocumentLayout_Qt_Metacast")]
	public static extern void* QAbstractTextDocumentLayout_Qt_Metacast(QAbstractTextDocumentLayout_Ptr* self, c_char* param1);
	[LinkName("QAbstractTextDocumentLayout_Qt_Metacall")]
	public static extern c_int QAbstractTextDocumentLayout_Qt_Metacall(QAbstractTextDocumentLayout_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QAbstractTextDocumentLayout_Tr")]
	public static extern libqt_string QAbstractTextDocumentLayout_Tr(c_char* s);
	[LinkName("QAbstractTextDocumentLayout_Draw")]
	public static extern void QAbstractTextDocumentLayout_Draw(QAbstractTextDocumentLayout_Ptr* self, QPainter_Ptr** painter, QAbstractTextDocumentLayout_PaintContext_Ptr* context);
	[LinkName("QAbstractTextDocumentLayout_HitTest")]
	public static extern c_int QAbstractTextDocumentLayout_HitTest(QAbstractTextDocumentLayout_Ptr* self, QPointF_Ptr* point, Qt_HitTestAccuracy accuracy);
	[LinkName("QAbstractTextDocumentLayout_AnchorAt")]
	public static extern libqt_string QAbstractTextDocumentLayout_AnchorAt(QAbstractTextDocumentLayout_Ptr* self, QPointF_Ptr* pos);
	[LinkName("QAbstractTextDocumentLayout_ImageAt")]
	public static extern libqt_string QAbstractTextDocumentLayout_ImageAt(QAbstractTextDocumentLayout_Ptr* self, QPointF_Ptr* pos);
	[LinkName("QAbstractTextDocumentLayout_FormatAt")]
	public static extern QTextFormat_Ptr* QAbstractTextDocumentLayout_FormatAt(QAbstractTextDocumentLayout_Ptr* self, QPointF_Ptr* pos);
	[LinkName("QAbstractTextDocumentLayout_BlockWithMarkerAt")]
	public static extern QTextBlock_Ptr* QAbstractTextDocumentLayout_BlockWithMarkerAt(QAbstractTextDocumentLayout_Ptr* self, QPointF_Ptr* pos);
	[LinkName("QAbstractTextDocumentLayout_PageCount")]
	public static extern c_int QAbstractTextDocumentLayout_PageCount(QAbstractTextDocumentLayout_Ptr* self);
	[LinkName("QAbstractTextDocumentLayout_DocumentSize")]
	public static extern QSizeF_Ptr* QAbstractTextDocumentLayout_DocumentSize(QAbstractTextDocumentLayout_Ptr* self);
	[LinkName("QAbstractTextDocumentLayout_FrameBoundingRect")]
	public static extern QRectF_Ptr* QAbstractTextDocumentLayout_FrameBoundingRect(QAbstractTextDocumentLayout_Ptr* self, QTextFrame_Ptr** frame);
	[LinkName("QAbstractTextDocumentLayout_BlockBoundingRect")]
	public static extern QRectF_Ptr* QAbstractTextDocumentLayout_BlockBoundingRect(QAbstractTextDocumentLayout_Ptr* self, QTextBlock_Ptr* block);
	[LinkName("QAbstractTextDocumentLayout_SetPaintDevice")]
	public static extern void QAbstractTextDocumentLayout_SetPaintDevice(QAbstractTextDocumentLayout_Ptr* self, QPaintDevice_Ptr** device);
	[LinkName("QAbstractTextDocumentLayout_PaintDevice")]
	public static extern QPaintDevice_Ptr** QAbstractTextDocumentLayout_PaintDevice(QAbstractTextDocumentLayout_Ptr* self);
	[LinkName("QAbstractTextDocumentLayout_Document")]
	public static extern QTextDocument_Ptr** QAbstractTextDocumentLayout_Document(QAbstractTextDocumentLayout_Ptr* self);
	[LinkName("QAbstractTextDocumentLayout_RegisterHandler")]
	public static extern void QAbstractTextDocumentLayout_RegisterHandler(QAbstractTextDocumentLayout_Ptr* self, c_int objectType, QObject_Ptr** component);
	[LinkName("QAbstractTextDocumentLayout_UnregisterHandler")]
	public static extern void QAbstractTextDocumentLayout_UnregisterHandler(QAbstractTextDocumentLayout_Ptr* self, c_int objectType);
	[LinkName("QAbstractTextDocumentLayout_HandlerForObject")]
	public static extern QTextObjectInterface_Ptr** QAbstractTextDocumentLayout_HandlerForObject(QAbstractTextDocumentLayout_Ptr* self, c_int objectType);
	[LinkName("QAbstractTextDocumentLayout_Update")]
	public static extern void QAbstractTextDocumentLayout_Update(QAbstractTextDocumentLayout_Ptr* self);
	[LinkName("QAbstractTextDocumentLayout_UpdateBlock")]
	public static extern void QAbstractTextDocumentLayout_UpdateBlock(QAbstractTextDocumentLayout_Ptr* self, QTextBlock_Ptr* block);
	[LinkName("QAbstractTextDocumentLayout_DocumentSizeChanged")]
	public static extern void QAbstractTextDocumentLayout_DocumentSizeChanged(QAbstractTextDocumentLayout_Ptr* self, QSizeF_Ptr* newSize);
	[LinkName("QAbstractTextDocumentLayout_PageCountChanged")]
	public static extern void QAbstractTextDocumentLayout_PageCountChanged(QAbstractTextDocumentLayout_Ptr* self, c_int newPages);
	[LinkName("QAbstractTextDocumentLayout_DocumentChanged")]
	public static extern void QAbstractTextDocumentLayout_DocumentChanged(QAbstractTextDocumentLayout_Ptr* self, c_int from, c_int charsRemoved, c_int charsAdded);
	[LinkName("QAbstractTextDocumentLayout_ResizeInlineObject")]
	public static extern void QAbstractTextDocumentLayout_ResizeInlineObject(QAbstractTextDocumentLayout_Ptr* self, QTextInlineObject_Ptr* item, c_int posInDocument, QTextFormat_Ptr* format);
	[LinkName("QAbstractTextDocumentLayout_PositionInlineObject")]
	public static extern void QAbstractTextDocumentLayout_PositionInlineObject(QAbstractTextDocumentLayout_Ptr* self, QTextInlineObject_Ptr* item, c_int posInDocument, QTextFormat_Ptr* format);
	[LinkName("QAbstractTextDocumentLayout_DrawInlineObject")]
	public static extern void QAbstractTextDocumentLayout_DrawInlineObject(QAbstractTextDocumentLayout_Ptr* self, QPainter_Ptr** painter, QRectF_Ptr* rect, QTextInlineObject_Ptr* object, c_int posInDocument, QTextFormat_Ptr* format);
	[LinkName("QAbstractTextDocumentLayout_FormatIndex")]
	public static extern c_int QAbstractTextDocumentLayout_FormatIndex(QAbstractTextDocumentLayout_Ptr* self, c_int pos);
	[LinkName("QAbstractTextDocumentLayout_Format")]
	public static extern QTextCharFormat_Ptr* QAbstractTextDocumentLayout_Format(QAbstractTextDocumentLayout_Ptr* self, c_int pos);
	[LinkName("QAbstractTextDocumentLayout_Tr2")]
	public static extern libqt_string QAbstractTextDocumentLayout_Tr2(c_char* s, c_char* c);
	[LinkName("QAbstractTextDocumentLayout_Tr3")]
	public static extern libqt_string QAbstractTextDocumentLayout_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QAbstractTextDocumentLayout_UnregisterHandler2")]
	public static extern void QAbstractTextDocumentLayout_UnregisterHandler2(QAbstractTextDocumentLayout_Ptr* self, c_int objectType, QObject_Ptr** component);
	[LinkName("QAbstractTextDocumentLayout_Update1")]
	public static extern void QAbstractTextDocumentLayout_Update1(QAbstractTextDocumentLayout_Ptr* self, QRectF_Ptr* param1);
}
